refactor(core,db): move setup() to @alexi/core, rename DATABASE to DATABASES
- Add setup() to @alexi/core that accepts a DATABASES dict of pre-built
  backend instances, connecting and registering each with the ORM via
  a dynamic import of @alexi/db (avoiding static browser-bundle leakage)
- Remove migration commands (MakemigrationsCommand, MigrateCommand, etc.)
  from @alexi/core barrel export; expose via new @alexi/core/management
  sub-path only (server-only, not imported in browser bundles)
- Rename DATABASE -> DATABASES in AlexiSettings; remove static DenoKVBackend
  imports from src/core/config.ts and src/web/commands/runserver.ts
- Rewrite src/db/setup.ts: remove old app-level setup(); keep registry API
  (registerBackend, getBackend, setBackend, reset, isInitialized); add back
  a db-level setup({ backend }) / setup({ databases }) for internal tests
- Update all admin tests, scaffolding templates, and settings templates to
  use the new DATABASES format and import setup from @alexi/core
- Add @alexi/core/management to e2e_utils.ts local import patching
- Update AGENTS.md with new import paths, settings format, and setup docs

Closes #176

--- a/deno.json
+++ b/deno.json
@@ -22,6 +22,7 @@
   "exports": {
     ".": "./src/mod.ts",
     "./core": "./src/core/mod.ts",
+    "./core/management": "./src/core/commands/mod.ts",
     "./db": "./src/db/mod.ts",
     "./db/config": "./src/db/app.ts",
     "./db/backends/denokv": "./src/db/backends/denokv/mod.ts",
@@ -78,6 +79,7 @@
   "imports": {
     "@alexi/types": "./src/types/mod.ts",
     "@alexi/core": "./src/core/mod.ts",
+    "@alexi/core/management": "./src/core/commands/mod.ts",
     "@alexi/db": "./src/db/mod.ts",
     "@alexi/db/backends/denokv": "./src/db/backends/denokv/mod.ts",
     "@alexi/db/backends/indexeddb": "./src/db/backends/indexeddb/mod.ts",
