--- a/src/core/deno.jsonc
+++ b/src/core/deno.jsonc
@@ -4,7 +4,8 @@
   "license": "MIT",
   "exports": {
     ".": "./mod.ts",
-    "./commands": "./commands/mod.ts"
+    "./commands": "./commands/mod.ts",
+    "./management": "./commands/mod.ts"
   },
   "imports": {
     "@alexi/types": "jsr:@alexi/types@0.26.4",
